# dw-camkes-apps

./: .gitignore  CMakeLists.txt  Kbuild  Kconfig  Makefile  Makefile.bk  app_settings.cmake  gdb_test.camkes  gdb_test.camkes.dbg  ia32_gdb_test_defconfig  lwip_settings.cmake
apps/camkes_http/: CMakeLists.txt  Kbuild  Kconfig  Makefile  README.md  http_server.camkes
apps/camkes_http/components/Echo/: CMakeLists.txt  Echo.camkes
apps/camkes_http/components/Echo/src/: echo.c
apps/camkes_http/components/Ethdriver/: CMakeLists.txt  Ethdriver.camkes  Ethdriver.mk
apps/camkes_http/components/Ethdriver/include/: EthType.h  defines.h  device_config.h  platform.h
apps/camkes_http/components/Ethdriver/include/plat/imx6/plat/: ethernet.h
apps/camkes_http/components/Ethdriver/include/plat/zynq7000/plat/: ethernet.h
apps/camkes_http/components/Ethdriver/src/: ethdriver.c
apps/camkes_http/components/Ethdriver/src/plat/imx6/: imx6.c
apps/camkes_http/components/Ethdriver/src/plat/zynq7000/: zynq7000.c
apps/camkes_http/components/FileSystem/: CMakeLists.txt  FileSystem.camkes  FileSystem.mk  makefs.py
apps/camkes_http/components/FileSystem/include/: fs.h  fsdata.h
apps/camkes_http/components/FileSystem/src/: fs.c  fsdata.c
apps/camkes_http/components/FileSystem/web/: 404.html  index.html  request.js
apps/camkes_http/components/Router/: CMakeLists.txt  Router.camkes  Router.mk
apps/camkes_http/components/Router/include/: TimerType.h  defines.h  device_config.h  fs.h  router.h
apps/camkes_http/components/Router/src/: router.c  status_updates.c
apps/camkes_http/interfaces/: Ethdriver.idl4  TIMER.idl4  file_system.idl4  http.idl4  procedures.camkes  tcp.idl4
apps/camkes_http/templates/: seL4EPIT.template.c  seL4GPT.template.c  seL4HTTPServer-cgi.template.c  seL4HTTPServer.template.c  seL4TCP-from.template.c  seL4TCP-to.template.c  seL4TIMER.template.c
build-config/: Kconfig-camkes
configs/: imx6_eth_gdb_defconfig  imx6_serial_gdb_defconfig  zynq_eth_gdb_defconfig  zynq_serial_gdb_defconfig
debug/: debug.camkes  templates
interfaces/: MyInterface.idl4  (+1 more)
(+22 files in other folders)
